tests/snapshots/model__tests__model_from_sc105.snap
---
source: tests/model.rs
expression: model
---
name: SC105
row_types:
  ROW00076: Leq
  ROW00001: Leq
  ROW00053: Leq
  ROW00082: Eq
  ROW00059: Eq
  ROW00009: Leq
  ROW00043: Leq
  ROW00063: Leq
  ROW00008: Leq
  ROW00020: Leq
  ROW00085: Leq
  ROW00061: Eq
  ROW00018: Eq
  ROW00051: Eq
  ROW00037: Eq
  ROW00074: Leq
  ROW00086: Leq
  ROW00045: Leq
  ROW00101: Leq
  ROW00026: Eq
  ROW00004: Eq
  ROW00010: Leq
  ROW00071: Eq
  ROW00068: Leq
  ROW00102: Eq
  ROW00088: Leq
  ROW00062: Eq
  ROW00096: Leq
  ROW00054: Leq
  ROW00007: Eq
  ROW00029: Eq
  ROW00046: Leq
  ROW00017: Eq
  ROW00041: Leq
  ROW00052: Leq
  ROW00060: Eq
  ROW00077: Leq
  ROW00012: Leq
  ROW00078: Leq
  ROW00087: Leq
  ROW00094: Eq
  ROW00099: Leq
  ROW00104: Leq
  ROW00015: Eq
  ROW00038: Eq
  ROW00013: Leq
  ROW00014: Eq
  ROW00002: Leq
  ROW00024: Leq
  ROW00035: Leq
  ROW00021: Leq
  ROW00069: Eq
  ROW00073: Eq
  ROW00084: Eq
  ROW00019: Leq
  ROW00027: Eq
  ROW00039: Eq
  ROW00050: Eq
  ROW00072: Eq
  ROW00070: Eq
  ROW00048: Eq
  ROW00044: Leq
  ROW00003: Leq
  ROW00049: Eq
  ROW00079: Leq
  ROW00089: Leq
  ROW00095: Eq
  ROW00103: Leq
  ROW00016: Eq
  ROW00064: Leq
  ROW00006: Eq
  ROW00090: Leq
  ROW00065: Leq
  ROW00097: Leq
  ROW00100: Leq
  ROW00056: Leq
  ROW00081: Eq
  ROW00023: Leq
  ROW00083: Eq
  ROW00067: Leq
  ROW00093: Eq
  ROW00058: Eq
  ROW00066: Leq
  MAXIM: Nr
  ROW00091: Eq
  ROW00034: Leq
  ROW00092: Eq
  ROW00105: Leq
  ROW00031: Leq
  ROW00057: Leq
  ROW00075: Leq
  ROW00011: Leq
  ROW00030: Leq
  ROW00042: Leq
  ROW00032: Leq
  ROW00033: Leq
  ROW00047: Eq
  ROW00022: Leq
  ROW00036: Eq
  ROW00055: Leq
  ROW00040: Eq
  ROW00005: Eq
  ROW00080: Eq
  ROW00025: Eq
  ROW00028: Eq
  ROW00098: Leq
values:
  ? - ROW00028
    - COL00018
  : -1
  ? - ROW00089
    - COL00087
  : -1
  ? - ROW00004
    - COL00004
  : 1
  ? - ROW00093
    - COL00094
  : 1
  ? - ROW00042
    - COL00043
  : 1
  ? - ROW00053
    - COL00054
  : 1
  ? - ROW00033
    - COL00035
  : 1
  ? - ROW00008
    - COL00006
  : -1
  ? - ROW00012
    - COL00012
  : 1
  ? - ROW00050
    - COL00040
  : -1
  ? - ROW00093
    - COL00083
  : -1
  ? - ROW00094
    - COL00095
  : 1
  ? - ROW00089
    - COL00090
  : 2
  ? - ROW00036
    - COL00037
  : -1
  ? - ROW00105
    - COL00102
  : -1
  ? - ROW00104
    - COL00100
  : 0.1
  ? - ROW00071
    - COL00061
  : -1
  ? - ROW00048
    - COL00049
  : -1
  ? - ROW00064
    - COL00065
  : 1
  ? - ROW00081
    - COL00081
  : 1
  ? - ROW00016
    - COL00012
  : -1
  ? - ROW00023
    - COL00021
  : -1
  ? - ROW00071
    - COL00067
  : -1
  ? - ROW00012
    - COL00010
  : -1
  ? - ROW00059
    - COL00059
  : 1
  ? - ROW00049
    - COL00050
  : 1
  ? - ROW00090
    - COL00082
  : 1
  ? - ROW00022
    - COL00025
  : 1.5
  ? - ROW00010
    - COL00008
  : -1
  ? - ROW00078
    - COL00079
  : 2
  ? - ROW00087
    - COL00088
  : 1
  ? - ROW00033
    - COL00034
  : 2
  ? - ROW00053
    - COL00051
  : -1
  ? - ROW00097
    - COL00095
  : -1
  ? - ROW00017
    - COL00018
  : 1
  ? - ROW00055
    - COL00057
  : 1
  ? - ROW00078
    - COL00078
  : 1
  ? - ROW00092
    - COL00092
  : 1
  ? - ROW00008
    - COL00009
  : 1
  ? - ROW00029
    - COL00030
  : 1
  ? - ROW00098
    - COL00096
  : -1
  ? - ROW00070
    - COL00060
  : 1
  ? - ROW00091
    - COL00081
  : 1.1
  ? - ROW00052
    - COL00053
  : 1
  ? - ROW00033
    - COL00031
  : -1
  ? - ROW00002
    - COL00002
  : 2
  ? - ROW00005
    - COL00006
  : 1
  ? - MAXIM
    - COL00004
  : -1
  ? - ROW00048
    - COL00038
  : 1
  ? - ROW00056
    - COL00057
  : 2
  ? - ROW00102
    - COL00092
  : 1.1
  ? - ROW00064
    - COL00062
  : -1
  ? - ROW00069
    - COL00070
  : -1
  ? - ROW00074
    - COL00072
  : -1
  ? - ROW00048
    - COL00048
  : 1
  ? - ROW00027
    - COL00028
  : 1
  ? - ROW00025
    - COL00026
  : -1
  ? - ROW00067
    - COL00067
  : 1
  ? - ROW00061
    - COL00051
  : -1
  ? - ROW00071
    - COL00072
  : 1
  ? - ROW00015
    - COL00015
  : 1
  ? - ROW00088
    - COL00091
  : 1.5
  ? - ROW00050
    - COL00051
  : 1
  ? - ROW00077
    - COL00079
  : 1
  ? - ROW00102
    - COL00103
  : -1
  ? - ROW00022
    - COL00020
  : -1
  ? - ROW00017
    - COL00013
  : -1
  ? - ROW00066
    - COL00068
  : 1
  ? - ROW00079
    - COL00077
  : -1
  ? - ROW00100
    - COL00101
  : 2
  ? - ROW00044
    - COL00046
  : 1
  ? - ROW00043
    - COL00044
  : 1
  ? - ROW00046
    - COL00044
  : -1
  ? - ROW00079
    - COL00071
  : 1
  ? - ROW00059
    - COL00049
  : 1
  ? - ROW00073
    - COL00063
  : -1
  ? - ROW00077
    - COL00075
  : -1
  ? - ROW00094
    - COL00084
  : -1
  ? - ROW00099
    - COL00097
  : -1
  ? - ROW00103
    - COL00101
  : 0.1
  ? - ROW00029
    - COL00019
  : -1
  ? - ROW00054
    - COL00052
  : -1
  ? - ROW00100
    - COL00102
  : 1.5
  ? - ROW00096
    - COL00097
  : 1
  ? - ROW00085
    - COL00083
  : -1
  ? - ROW00082
    - COL00083
  : 1
  ? - ROW00081
    - COL00071
  : 1
  ? - ROW00027
    - COL00023
  : -1
  ? - ROW00034
    - COL00035
  : 2
  ? - ROW00100
    - COL00098
  : -1
  ? - ROW00067
    - COL00068
  : 2
  ? - ROW00101
    - COL00093
  : 1
  ? - ROW00059
    - COL00060
  : -1
  ? - ROW00073
    - COL00074
  : 1
  ? - ROW00090
    - COL00088
  : -1
  ? - ROW00056
    - COL00056
  : 1
  ? - ROW00069
    - COL00059
  : 1.1
  ? - ROW00072
    - COL00073
  : 1
  ? - ROW00011
    - COL00012
  : 2
  ? - ROW00080
    - COL00081
  : -1
  ? - ROW00082
    - COL00072
  : -1
  ? - ROW00040
    - COL00030
  : -1
  ? - ROW00095
    - COL00091
  : -1
  ? - ROW00034
    - COL00032
  : -1
  ? - ROW00015
    - COL00005
  : 1
  ? - ROW00022
    - COL00024
  : 1
  ? - ROW00041
    - COL00039
  : -1
  ? - ROW00058
    - COL00059
  : -1
  ? - ROW00101
    - COL00099
  : -1
  ? - ROW00104
    - COL00101
  : -0.8
  ? - ROW00021
    - COL00019
  : -1
  ? - ROW00066
    - COL00064
  : -1
  ? - ROW00060
    - COL00056
  : -1
  ? - ROW00081
    - COL00082
  : -1
  ? - ROW00034
    - COL00034
  : 1
  ? - ROW00033
    - COL00036
  : 1.5
  ? - ROW00084
    - COL00080
  : -1
  ? - ROW00002
    - COL00003
  : 1.5
  ? - ROW00038
    - COL00028
  : -1
  ? - ROW00055
    - COL00056
  : 2
  ? - ROW00007
    - COL00003
  : -1
  ? - ROW00037
    - COL00037
  : 1
  ? - ROW00035
    - COL00027
  : 1
  ? - ROW00077
    - COL00078
  : 2
  ? - ROW00026
    - COL00026
  : 1
  ? - ROW00035
    - COL00033
  : -1
  ? - ROW00011
    - COL00014
  : 1.5
  ? - ROW00098
    - COL00099
  : 1
  ? - ROW00032
    - COL00030
  : -1
  ? - ROW00007
    - COL00008
  : 1
  ? - ROW00068
    - COL00060
  : 1
  ? - ROW00038
    - COL00034
  : -1
  ? - ROW00051
    - COL00047
  : -1
  ? - ROW00062
    - COL00058
  : -1
  ? - ROW00072
    - COL00068
  : -1
  ? - ROW00012
    - COL00014
  : 1.5
  ? - ROW00065
    - COL00066
  : 1
  ? - ROW00078
    - COL00080
  : 1.5
  ? - ROW00089
    - COL00089
  : 1
  ? - ROW00088
    - COL00089
  : 2
  ? - ROW00076
    - COL00077
  : 1
  ? - ROW00056
    - COL00054
  : -1
  ? - ROW00092
    - COL00082
  : 1
  ? - ROW00086
    - COL00084
  : -1
  ? - ROW00066
    - COL00067
  : 2
  ? - ROW00041
    - COL00042
  : 1
  ? - ROW00082
    - COL00078
  : -1
  ? - ROW00062
    - COL00063
  : 1
  ? - ROW00086
    - COL00087
  : 1
  ? - ROW00057
    - COL00055
  : -1
  ? - ROW00042
    - COL00040
  : -1
  ? - ROW00058
    - COL00048
  : 1.1
  ? - ROW00070
    - COL00070
  : 1
  ? - ROW00045
    - COL00043
  : -1
  ? - ROW00026
    - COL00027
  : -1
  ? - ROW00031
    - COL00032
  : 1
  ? - ROW00055
    - COL00058
  : 1.5
  ? - ROW00046
    - COL00038
  : 1
  ? - ROW00072
    - COL00062
  : -1
  ? - ROW00032
    - COL00033
  : 1
  ? - ROW00075
    - COL00076
  : 1
  ? - ROW00085
    - COL00086
  : 1
  ? - ROW00019
    - COL00020
  : 1
  ? - ROW00031
    - COL00029
  : -1
  ? - ROW00002
    - COL00001
  : 1
  ? - ROW00089
    - COL00091
  : 1.5
  ? - ROW00096
    - COL00094
  : -1
  ? - ROW00047
    - COL00048
  : -1
  ? - ROW00067
    - COL00065
  : -1
  ? - ROW00037
    - COL00027
  : 1
  ? - ROW00093
    - COL00089
  : -1
  ? - ROW00026
    - COL00016
  : 1
  ? - ROW00022
    - COL00023
  : 2
  ? - ROW00075
    - COL00073
  : -1
  ? - ROW00019
    - COL00017
  : -1
  ? - ROW00092
    - COL00093
  : -1
  ? - ROW00001
    - COL00001
  : 2
  ? - ROW00097
    - COL00098
  : 1
  ? - ROW00025
    - COL00015
  : 1.1
  ? - ROW00014
    - COL00015
  : -1
  ? - ROW00062
    - COL00052
  : -1
  ? - ROW00061
    - COL00062
  : 1
  ? - ROW00078
    - COL00076
  : -1
  ? - ROW00023
    - COL00023
  : 1
  ? - ROW00030
    - COL00028
  : -1
  ? - ROW00014
    - COL00004
  : 1.1
  ? - ROW00047
    - COL00037
  : 1.1
  ? - ROW00088
    - COL00090
  : 1
  ? - ROW00104
    - COL00102
  : 0.15
  ? - ROW00080
    - COL00070
  : 1.1
  ? - ROW00009
    - COL00007
  : -1
  ? - ROW00011
    - COL00009
  : -1
  ? - ROW00039
    - COL00035
  : -1
  ? - ROW00056
    - COL00058
  : 1.5
  ? - ROW00061
    - COL00057
  : -1
  ? - ROW00018
    - COL00014
  : -1
  ? - ROW00027
    - COL00017
  : -1
  ? - ROW00083
    - COL00084
  : 1
  ? - ROW00029
    - COL00025
  : -1
  ? - ROW00017
    - COL00007
  : -1
  ? - ROW00049
    - COL00039
  : -1
  ? - ROW00028
    - COL00024
  : -1
  ? - ROW00045
    - COL00047
  : 1.5
  ? - ROW00066
    - COL00069
  : 1.5
  ? - ROW00039
    - COL00029
  : -1
  ? - ROW00005
    - COL00001
  : -1
  ? - ROW00063
    - COL00061
  : -1
  ? - ROW00063
    - COL00064
  : 1
  ? - ROW00099
    - COL00100
  : 2
  ? - ROW00099
    - COL00101
  : 1
  ? - ROW00074
    - COL00075
  : 1
  ? - ROW00084
    - COL00085
  : 1
  ? - ROW00088
    - COL00086
  : -1
  ? - ROW00065
    - COL00063
  : -1
  ? - ROW00006
    - COL00007
  : 1
  ? - ROW00021
    - COL00022
  : 1
  ? - ROW00039
    - COL00040
  : 1
  ? - ROW00050
    - COL00046
  : -1
  ? - ROW00060
    - COL00050
  : -1
  ? - ROW00016
    - COL00006
  : -1
  ? - ROW00055
    - COL00053
  : -1
  ? - ROW00034
    - COL00036
  : 1.5
  ? - ROW00020
    - COL00018
  : -1
  ? - ROW00054
    - COL00055
  : 1
  ? - ROW00068
    - COL00066
  : -1
  ? - ROW00083
    - COL00073
  : -1
  ? - ROW00084
    - COL00074
  : -1
  ? - ROW00103
    - COL00100
  : -0.8
  ? - ROW00070
    - COL00071
  : -1
  ? - ROW00020
    - COL00021
  : 1
  ? - ROW00100
    - COL00100
  : 1
  ? - ROW00011
    - COL00013
  : 1
  ? - ROW00103
    - COL00102
  : 0.15
  ? - ROW00037
    - COL00038
  : -1
  ? - ROW00030
    - COL00031
  : 1
  ? - ROW00083
    - COL00079
  : -1
  ? - ROW00043
    - COL00041
  : -1
  ? - ROW00087
    - COL00085
  : -1
  ? - ROW00095
    - COL00096
  : 1
  ? - ROW00013
    - COL00011
  : -1
  ? - ROW00024
    - COL00016
  : 1
  ? - ROW00006
    - COL00002
  : -1
  ? - ROW00044
    - COL00042
  : -1
  ? - ROW00051
    - COL00041
  : -1
  ? - ROW00001
    - COL00003
  : 1.5
  ? - ROW00012
    - COL00013
  : 2
  ? - ROW00028
    - COL00029
  : 1
  ? - ROW00018
    - COL00008
  : -1
  ? - ROW00045
    - COL00045
  : 1
  ? - ROW00018
    - COL00019
  : 1
  ? - ROW00044
    - COL00047
  : 1.5
  ? - ROW00004
    - COL00005
  : -1
  ? - ROW00040
    - COL00036
  : -1
  ? - ROW00049
    - COL00045
  : -1
  ? - ROW00023
    - COL00025
  : 1.5
  ? - ROW00036
    - COL00026
  : 1.1
  ? - ROW00060
    - COL00061
  : 1
  ? - ROW00076
    - COL00074
  : -1
  ? - ROW00045
    - COL00046
  : 2
  ? - ROW00057
    - COL00049
  : 1
  ? - ROW00052
    - COL00050
  : -1
  ? - ROW00010
    - COL00011
  : 1
  ? - ROW00013
    - COL00005
  : 1
  ? - ROW00015
    - COL00016
  : -1
  ? - ROW00073
    - COL00069
  : -1
  ? - ROW00094
    - COL00090
  : -1
  ? - ROW00044
    - COL00045
  : 2
  ? - ROW00095
    - COL00085
  : -1
  ? - ROW00099
    - COL00102
  : 1.5
  ? - ROW00051
    - COL00052
  : 1
  ? - ROW00040
    - COL00041
  : 1
  ? - ROW00009
    - COL00010
  : 1
  ? - ROW00067
    - COL00069
  : 1.5
  ? - ROW00091
    - COL00092
  : -1
  ? - ROW00001
    - COL00002
  : 1
  ? - ROW00023
    - COL00024
  : 2
  ? - ROW00038
    - COL00039
  : 1
  ? - ROW00077
    - COL00080
  : 1.5
  ? - ROW00105
    - COL00103
  : 1
  ? - ROW00024
    - COL00022
  : -1
  ? - ROW00016
    - COL00017
  : 1
rhs:
  CONST:
    ROW00001: 200
    ROW00088: 200
    ROW00089: 100
    ROW00034: 100
    ROW00099: 200
    ROW00044: 200
    ROW00077: 200
    ROW00011: 200
    ROW00012: 100
    ROW00033: 200
    ROW00078: 100
    ROW00022: 200
    ROW00055: 200
    ROW00100: 100
    ROW00056: 100
    ROW00045: 100
    ROW00002: 100
    ROW00023: 100
    ROW00067: 100
    ROW00066: 200
bounds: {}
ranges: {}

