tests/snapshots/model__tests__model_from_sc50a.snap
---
source: tests/model.rs
expression: model
---
name: SC50A
row_types:
  ROW00038: Eq
  ROW00001: Leq
  ROW00019: Leq
  ROW00027: Eq
  ROW00039: Eq
  ROW00040: Eq
  ROW00050: Leq
  ROW00048: Leq
  ROW00044: Leq
  ROW00003: Leq
  ROW00049: Leq
  ROW00009: Leq
  ROW00043: Leq
  ROW00008: Leq
  ROW00016: Eq
  ROW00020: Leq
  ROW00006: Eq
  ROW00018: Eq
  ROW00037: Eq
  ROW00045: Leq
  ROW00023: Leq
  ROW00026: Eq
  ROW00004: Eq
  ROW00010: Leq
  MAXIM: Nr
  ROW00034: Leq
  ROW00007: Eq
  ROW00029: Eq
  ROW00031: Leq
  ROW00017: Eq
  ROW00041: Leq
  ROW00011: Leq
  ROW00030: Leq
  ROW00042: Leq
  ROW00012: Leq
  ROW00032: Leq
  ROW00033: Leq
  ROW00046: Leq
  ROW00047: Eq
  ROW00022: Leq
  ROW00036: Eq
  ROW00015: Eq
  ROW00005: Eq
  ROW00013: Leq
  ROW00014: Eq
  ROW00002: Leq
  ROW00025: Eq
  ROW00024: Leq
  ROW00021: Leq
  ROW00028: Eq
  ROW00035: Leq
values:
  ? - ROW00028
    - COL00018
  : -1
  ? - ROW00048
    - COL00046
  : 0.1
  ? - ROW00038
    - COL00034
  : -1
  ? - ROW00004
    - COL00004
  : 1
  ? - ROW00012
    - COL00014
  : 1.5
  ? - ROW00042
    - COL00043
  : 1
  ? - ROW00033
    - COL00035
  : 1
  ? - ROW00008
    - COL00006
  : -1
  ? - ROW00012
    - COL00012
  : 1
  ? - ROW00036
    - COL00037
  : -1
  ? - ROW00041
    - COL00042
  : 1
  ? - ROW00049
    - COL00046
  : -0.8
  ? - ROW00016
    - COL00012
  : -1
  ? - ROW00023
    - COL00021
  : -1
  ? - ROW00042
    - COL00040
  : -1
  ? - ROW00012
    - COL00010
  : -1
  ? - ROW00045
    - COL00043
  : -1
  ? - ROW00026
    - COL00027
  : -1
  ? - ROW00031
    - COL00032
  : 1
  ? - ROW00046
    - COL00038
  : 1
  ? - ROW00022
    - COL00025
  : 1.5
  ? - ROW00032
    - COL00033
  : 1
  ? - ROW00010
    - COL00008
  : -1
  ? - ROW00019
    - COL00020
  : 1
  ? - ROW00002
    - COL00001
  : 1
  ? - ROW00031
    - COL00029
  : -1
  ? - ROW00047
    - COL00048
  : -1
  ? - ROW00033
    - COL00034
  : 2
  ? - ROW00017
    - COL00018
  : 1
  ? - ROW00037
    - COL00027
  : 1
  ? - ROW00026
    - COL00016
  : 1
  ? - ROW00008
    - COL00009
  : 1
  ? - ROW00022
    - COL00023
  : 2
  ? - ROW00019
    - COL00017
  : -1
  ? - ROW00029
    - COL00030
  : 1
  ? - ROW00001
    - COL00001
  : 2
  ? - ROW00025
    - COL00015
  : 1.1
  ? - ROW00002
    - COL00002
  : 2
  ? - ROW00005
    - COL00006
  : 1
  ? - MAXIM
    - COL00004
  : -1
  ? - ROW00014
    - COL00015
  : -1
  ? - ROW00033
    - COL00031
  : -1
  ? - ROW00023
    - COL00023
  : 1
  ? - ROW00027
    - COL00028
  : 1
  ? - ROW00030
    - COL00028
  : -1
  ? - ROW00014
    - COL00004
  : 1.1
  ? - ROW00047
    - COL00037
  : 1.1
  ? - ROW00025
    - COL00026
  : -1
  ? - ROW00009
    - COL00007
  : -1
  ? - ROW00011
    - COL00009
  : -1
  ? - ROW00049
    - COL00047
  : 0.15
  ? - ROW00039
    - COL00035
  : -1
  ? - ROW00015
    - COL00015
  : 1
  ? - ROW00018
    - COL00014
  : -1
  ? - ROW00027
    - COL00017
  : -1
  ? - ROW00029
    - COL00025
  : -1
  ? - ROW00022
    - COL00020
  : -1
  ? - ROW00017
    - COL00007
  : -1
  ? - ROW00017
    - COL00013
  : -1
  ? - ROW00028
    - COL00024
  : -1
  ? - ROW00045
    - COL00047
  : 1.5
  ? - ROW00044
    - COL00046
  : 1
  ? - ROW00043
    - COL00044
  : 1
  ? - ROW00046
    - COL00044
  : -1
  ? - ROW00039
    - COL00029
  : -1
  ? - ROW00005
    - COL00001
  : -1
  ? - ROW00029
    - COL00019
  : -1
  ? - ROW00006
    - COL00007
  : 1
  ? - ROW00021
    - COL00022
  : 1
  ? - ROW00027
    - COL00023
  : -1
  ? - ROW00034
    - COL00035
  : 2
  ? - ROW00039
    - COL00040
  : 1
  ? - ROW00016
    - COL00006
  : -1
  ? - ROW00034
    - COL00036
  : 1.5
  ? - ROW00020
    - COL00018
  : -1
  ? - ROW00020
    - COL00021
  : 1
  ? - ROW00011
    - COL00013
  : 1
  ? - ROW00011
    - COL00012
  : 2
  ? - ROW00030
    - COL00031
  : 1
  ? - ROW00037
    - COL00038
  : -1
  ? - ROW00043
    - COL00041
  : -1
  ? - ROW00040
    - COL00030
  : -1
  ? - ROW00013
    - COL00011
  : -1
  ? - ROW00024
    - COL00016
  : 1
  ? - ROW00006
    - COL00002
  : -1
  ? - ROW00034
    - COL00032
  : -1
  ? - ROW00044
    - COL00042
  : -1
  ? - ROW00001
    - COL00003
  : 1.5
  ? - ROW00015
    - COL00005
  : 1
  ? - ROW00012
    - COL00013
  : 2
  ? - ROW00018
    - COL00008
  : -1
  ? - ROW00041
    - COL00039
  : -1
  ? - ROW00022
    - COL00024
  : 1
  ? - ROW00018
    - COL00019
  : 1
  ? - ROW00028
    - COL00029
  : 1
  ? - ROW00004
    - COL00005
  : -1
  ? - ROW00040
    - COL00036
  : -1
  ? - ROW00045
    - COL00045
  : 1
  ? - ROW00023
    - COL00025
  : 1.5
  ? - ROW00036
    - COL00026
  : 1.1
  ? - ROW00049
    - COL00045
  : 0.1
  ? - ROW00021
    - COL00019
  : -1
  ? - ROW00044
    - COL00047
  : 1.5
  ? - ROW00050
    - COL00047
  : -1
  ? - ROW00050
    - COL00048
  : 1
  ? - ROW00045
    - COL00046
  : 2
  ? - ROW00010
    - COL00011
  : 1
  ? - ROW00013
    - COL00005
  : 1
  ? - ROW00034
    - COL00034
  : 1
  ? - ROW00033
    - COL00036
  : 1.5
  ? - ROW00015
    - COL00016
  : -1
  ? - ROW00044
    - COL00045
  : 2
  ? - ROW00002
    - COL00003
  : 1.5
  ? - ROW00048
    - COL00045
  : -0.8
  ? - ROW00040
    - COL00041
  : 1
  ? - ROW00038
    - COL00028
  : -1
  ? - ROW00007
    - COL00003
  : -1
  ? - ROW00037
    - COL00037
  : 1
  ? - ROW00009
    - COL00010
  : 1
  ? - ROW00035
    - COL00027
  : 1
  ? - ROW00026
    - COL00026
  : 1
  ? - ROW00035
    - COL00033
  : -1
  ? - ROW00011
    - COL00014
  : 1.5
  ? - ROW00048
    - COL00047
  : 0.15
  ? - ROW00001
    - COL00002
  : 1
  ? - ROW00023
    - COL00024
  : 2
  ? - ROW00038
    - COL00039
  : 1
  ? - ROW00032
    - COL00030
  : -1
  ? - ROW00007
    - COL00008
  : 1
  ? - ROW00024
    - COL00022
  : -1
  ? - ROW00016
    - COL00017
  : 1
rhs:
  CONST:
    ROW00001: 170
    ROW00022: 170
    ROW00034: 130
    ROW00044: 170
    ROW00045: 130
    ROW00002: 130
    ROW00011: 170
    ROW00023: 130
    ROW00012: 130
    ROW00033: 170
bounds: {}
ranges: {}

